tests/NormalTests/paczka1/fuzzy1/62078395.err
Error in line 3: yP¡7R S712 10,5
Error in line 13: Q63IiRD S864 89,5
Error in line 5: yP67R S712 26,0
Error in line 16: Q63IiRD S875 53,4
Error in line 25: CZjqF S875 61,4
Error in line 36: S864 S859 51,5
